--- a/src/app/shared/footer/footer-one/footer-one.component.html
+++ b/src/app/shared/footer/footer-one/footer-one.component.html
@@ -139,7 +139,7 @@
 			<div class="row">
 				<div class="col-xl-6 col-md-6 col-sm-12">
 					<div class="footer-end">
-						<p><i class="fa fa-copyright" aria-hidden="true"></i> {{ today | date:'y'}} Copyright 2020 ECom,
+						<p><i class="fa fa-copyright" aria-hidden="true"></i> {{ today | date:'y'}} Copyright  ECom,
 							Inc. All
 							rights Reserved.</p>
 					</div>
