--- a/src/app/Report/order-invoice/order-invoice.component.html
+++ b/src/app/Report/order-invoice/order-invoice.component.html
@@ -329,7 +329,7 @@
         </table>
 
         <div>
-            Tax Amount (in words) :<b> Indian Rupees {{TotalAmountInWord}} Only</b>
+            Tax Amount (in words) :<b> Indian Rupees {{TotalAmountInWord}}</b>
         </div>
 
         <div class="declaration mt-5">
