--- a/src/assets/scss/theme/_style.scss
+++ b/src/assets/scss/theme/_style.scss
@@ -14289,7 +14289,7 @@ header a {
             a {
                 font-weight: 700;
                 &, i {
-                    color: #fff;
+                    color: #999;
                     font-size: .80rem;
                   }
             }
