--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -11,14 +11,33 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-5 text-right">
-                    <span class="Logininfo" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
-                        <a (click)="Login()" class="btn btn-solid btn-solid-small"><i
-                        class="fa fa-user" aria-hidden="true"></i>Login</a></span>
-                    <ul class="header-dropdown" *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
-                        <!--  <li class="compare">
-                           <a [routerLink]="['/shop/compare']"><i class="fa fa-random" aria-hidden="true"></i>Compare</a> 
-                            &nbsp;
+                <div class="col-lg-3 text-right">
+                    <ul class="header-dropdown">
+                        <li class="compare" style="padding-right: 43px">
+                            <a [routerLink]="['/shop/compare']">
+                                <i class="fa fa-random" aria-hidden="true"></i>Compare
+                                <span *ngIf="CompareCount>0" class="cart_qty_cls"
+                                    style="right:auto">{{CompareCount}}</span>
+                            </a> &nbsp;
+                        </li>
+                        <li class="mobile-wishlist">
+                            <a [routerLink]="['/shop/wishlist']">
+                                <i class="fa fa-heart" aria-hidden="true"></i>Wishlist
+                                <span *ngIf="WishListCount>0" class="cart_qty_cls"
+                                    style="right:auto">{{WishListCount}}</span>
+                            </a> &nbsp;
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 text-right">
+                    <span class="Logininfo"
+                        *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
+                        <a (click)="Login()" class="btn btn-solid btn-solid-small"><i class="fa fa-user"
+                                aria-hidden="true"></i>Login</a></span>
+                    <ul class="header-dropdown"
+                        *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
+                        <!--<li class="compare">
+                            <a [routerLink]="['/shop/compare']"><i class="fa fa-random" aria-hidden="true"></i>Compare</a> &nbsp;
                         </li>
                         <li class="mobile-wishlist">
                          <a [routerLink]="['/shop/wishlist']"><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a>
