--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -22,7 +22,7 @@
                         </li>
                         <li class="mobile-wishlist">
                             <a [routerLink]="['/shop/wishlist']">
-                                <i class="fa fa-heart" aria-hidden="true"></i>Wishlist
+                                <i class="fa fa-heart" aria-hidden="true"></i>Shortlist
                                 <span *ngIf="WishListCount>0" class="cart_qty_cls"
                                     style="right:auto">{{WishListCount}}</span>
                             </a> &nbsp;
