--- a/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
@@ -39,19 +39,23 @@
                 <div class="col-lg-5">
                     <div class="sticky-scroll">
                         <div class="row">
-                            <div class="col-sm-4 col-xl-3">
+                            <div>
                                 <div class="thumbnail-imgs">
-                                    <div *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i" class="thumbnail-img">
-                                        <div class="owl-thumb" [class.active]="i == activeSlide">
-                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
-                                                [alt]="image.alt" class="img-fluid" (click)="activeSlide = i.toString();ChangeImage();" (mouseover)="activeSlide = i.toString();ChangeImage();">
+                                    <div *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i"
+                                        class="thumbnail-img">
+                                        <div class="owl-thumb thumb-left-img" [class.active]="i == activeSlide">
+                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                                                [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                                                [alt]="image.alt" class="img-fluid"
+                                                (click)="activeSlide = i.toString();ChangeImage();"
+                                                (mouseover)="activeSlide = i.toString();ChangeImage();">
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-8 col-xl-9 product-carousel">
-                                <img id="zoom_01" class="img-fluid" src="{{ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[activeSlide]}}"
-                                />
+                                <img id="zoom_01" class="img-fluid"
+                                    src="{{ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[activeSlide]}}" />
                                 <!-- <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar class="product-slick">
                                     <ng-container *ngFor="let image of productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
                                         <ng-template carouselSlide [id]="i">
@@ -86,13 +90,15 @@
                             </div>
                         </div>
                         <div class="product-buttons row mt-2">
-                            <div class="col-6 mb-2">
-                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(2,productkart[0]?.minimum)">
+                            <div class="col-md-6 mb-2">
+                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
+                                    (click)="addToCart(2,productkart[0]?.minimum)">
                                     <i class="fa fa-bolt"></i> buy now</a>
                             </div>
-                            <div class="col-6 mb-2">
-                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(1,productkart[0]?.minimum)"><i
-                                    class="fa fa-shopping-cart"></i> add
+                            <div class="col-md-6 mb-2">
+                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
+                                    (click)="addToCart(1,productkart[0]?.minimum)"><i class="fa fa-shopping-cart"></i>
+                                    add
                                     to cart</a>
                             </div>
                         </div>
@@ -105,15 +111,21 @@
                     <div class="product-right">
                         <h4><b>{{ productkart[0]?.productName }}</b></h4>
                         <h4>
-                            <del *ngIf="productkart[0]?.discount > 0">{{  productkart[0]?.price | currency: productService.Currency?.currency:'symbol' }}</del>
+                            <del
+                                *ngIf="productkart[0]?.discount > 0">{{  productkart[0]?.price | currency: productService.Currency?.currency:'symbol' }}</del>
                             <span *ngIf="productkart[0]?.discount > 0"> {{ productkart[0]?.discount }}%
                                 off</span>
                         </h4>
                         <h3>
                             {{ productkart[0]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
                         </h3>
+                        
+                        
                         <ul class="color-variant">
-                            <li [class]="color" [class.active]="activeSlide == color.colorindex.toString()" *ngFor="let color of Color(productkart[0]?.productSizeColor); index as i" [ngStyle]="{'background-color': color.color}" (click)="changecolor(color.colorindex.toString())">
+                            <li [class]="color" [class.active]="activeSlide == color.colorindex.toString()"
+                                *ngFor="let color of Color(productkart[0]?.productSizeColor); index as i"
+                                [ngStyle]="{'background-color': color.color}"
+                                (click)="changecolor(i.toString())">
                             </li>
                         </ul>
                         <!-- <app-stock-inventory [stock]="productkart[0]?.qty"></app-stock-inventory> commented on 22 july by deepak -->
@@ -122,7 +134,8 @@
                             <div class="row">
                                 <div class="col-lg-8">
                                     <h6 class="product-title size-text clearfix mb-3">
-                                        Please select minimum of <strong style="font-size: x-large;">{{productkart[0]?.minimum}} </strong>Pieces
+                                        Please select minimum of <strong
+                                            style="font-size: x-large;">{{productkart[0]?.minimum}} </strong>Pieces
                                         <span>
                                             <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size
                                                 chart</a>
@@ -137,9 +150,13 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr *ngFor="let item of productkart[0]?.productSizeColor; let myIndex  = index">
+                                            <tr
+                                                *ngFor="let item of productkart[0]?.productSizeColor; let myIndex  = index">
                                                 <td>
-                                                    <input type="checkbox" [(ngModel)]="item.isSelected" *ngIf="item?.qty > 0" name="checkIn" [value]="item.productSizeId" id="{{myIndex}}" (ngModelChange)="fnCheck(item,$event,myIndex)"> {{item.color}}
+                                                    <input type="checkbox" [(ngModel)]="item.isSelected"
+                                                        *ngIf="item?.qty > 0" name="checkIn"
+                                                        [value]="item.productSizeId" id="{{myIndex}}"
+                                                        (ngModelChange)="fnCheck(item,$event,myIndex)"> {{item.color}}
 
                                                 </td>
                                                 <td>
@@ -155,7 +172,11 @@
                                                                     <i class="ti-minus"></i>
                                                                 </button>
                                                             </span>
-                                                            <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}" style="width: 45px; height: 27px;" class="form-control input-number" [value]="item.selectedQty" disabled />
+                                                            <input type="text" name="quantity"
+                                                                id="{{ 'txtqty' + myIndex}}"
+                                                                style="width: 45px; height: 27px;"
+                                                                class="form-control input-number"
+                                                                [value]="item.selectedQty" disabled />
                                                             <span class="input-group-prepend">
                                                                 <button type="button" class="btn quantity-right-plus"
                                                                     data-type="plus"
@@ -224,7 +245,9 @@
                                         <!-- <iframe width="560" height="315"
                                             src="https://www.youtube.com/embed/BUWzX78Ye_8"
                                               allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
-                                        <iframe width="560" height="315" [src]="productkart[0]?.videoURL | safe: 'resourceUrl'" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                        <iframe width="560" height="315"
+                                            [src]="productkart[0]?.videoURL | safe: 'resourceUrl'"
+                                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                     </div>
                                 </ng-template>
                             </ngb-tab>
