--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -31,18 +31,23 @@
                 <div class="col-lg-5">
                     <div class="sticky-scroll">
                         <div class="row">
-                            <div class="col-sm-4 col-xl-3">
+                            <div>
                                 <div class="thumbnail-imgs">
-                                    <div *ngFor="let image of  productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i" class="thumbnail-img">
-                                        <div class="owl-thumb" [class.active]="i == activeSlide">
-                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
-                                                [alt]="image.alt" class="img-fluid" (click)="activeSlide = i.toString();ChangeImage();" (mouseover)="activeSlide = i.toString();ChangeImage();">
+                                    <div *ngFor="let image of  productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i"
+                                        class="thumbnail-img">
+                                        <div class="owl-thumb thumb-left-img" [class.active]="i == activeSlide">
+                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                                                [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
+                                                [alt]="image.alt" class="img-fluid"
+                                                (click)="activeSlide = i.toString();ChangeImage();"
+                                                (mouseover)="activeSlide = i.toString();ChangeImage();">
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-8 col-xl-9 product-carousel">
-                                <img id="zoom_01" class="img-fluid" src="{{ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[activeSlide]}}" />
+                                <img id="zoom_01" class="img-fluid"
+                                    src="{{ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[activeSlide]}}" />
                                 <!-- <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar class="product-slick">
                                 <ng-container *ngFor="let image of productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i">
                                     <ng-template carouselSlide [id]="i">
@@ -77,11 +82,13 @@
                         <div class="product-buttons row mt-2">
 
                             <div class="col-6 mb-2">
-                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(2)">
+                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
+                                    (click)="addToCart(2)">
                                     <i class="fa fa-bolt"></i> buy now</a>
                             </div>
                             <div class="col-6 mb-2">
-                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(1)">
+                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
+                                    (click)="addToCart(1)">
                                     <i class="fa fa-shopping-cart"></i> add to cart</a>
                             </div>
                         </div>
@@ -103,12 +110,14 @@
                                 </h4>
 
                                 <h5>
-                                    <span>Price per set</span> {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
+                                    <span>Price per set</span>
+                                    {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
                                 </h5>
                             </div>
                             <div class="col-md-6">
                                 <h3>
-                                    Price per piece: {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.averagePrice | currency: productService.Currency?.currency:'symbol' }}
+                                    Price per piece:
+                                    {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.averagePrice | currency: productService.Currency?.currency:'symbol' }}
                                 </h3>
                                 <span>
                                     Total Pieces in this set:
@@ -130,7 +139,8 @@
 
                             <div class="size-box">
                                 <ul>
-                                    <li [class.active]="selectedSize == list" *ngFor="let list of SetList(productkart[0]?.productSizeSet);index as i">
+                                    <li [class.active]="selectedSize == list"
+                                        *ngFor="let list of SetList(productkart[0]?.productSizeSet);index as i">
                                         <a href="javascript:void(0)" (click)="selectSize(i)">
                                             {{ list }}
                                         </a>
@@ -162,7 +172,9 @@
                     <input type="checkbox" [(ngModel)]="item.isSelected"   [value]="item.setNo" name="checkIn" id="{{myIndex}}">
                 </td> -->
                                         <td>
-                                            <input type="checkbox" style="margin-top: 5px;" [(ngModel)]="item.isSelected" [value]="item.setNo" name="checkIn" id="{{myIndex}}"> {{item.setNo}}
+                                            <input type="checkbox" style="margin-top: 5px;"
+                                                [(ngModel)]="item.isSelected" [value]="item.setNo" name="checkIn"
+                                                id="{{myIndex}}"> {{item.setNo}}
                                         </td>
                                         <td>
                                             {{item.piece}}
@@ -178,7 +190,10 @@
                                                             <i class="ti-minus"></i>
                                                         </button>
                                                     </span>
-                                                    <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}" style="width: 45px; height: 27px;" class="form-control input-number" [value]="item.selectedQty" disabled />
+                                                    <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}"
+                                                        style="width: 45px; height: 27px;"
+                                                        class="form-control input-number" [value]="item.selectedQty"
+                                                        disabled />
                                                     <span class="input-group-prepend">
                                                         <button type="button" class="btn quantity-right-plus"
                                                             data-type="plus" (click)="increment(myIndex,item,item.qty)">
@@ -274,7 +289,8 @@
                                 <ng-template ngbTabTitle>Video</ng-template>
                                 <ng-template ngbTabContent>
                                     <div class="mt-3 text-center">
-                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BUWzX78Ye_8" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BUWzX78Ye_8"
+                                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                     </div>
                                 </ng-template>
                             </ngb-tab>
