--- a/src/app/shop/wishlist/wishlist.component.html
+++ b/src/app/shop/wishlist/wishlist.component.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="col-md-12 empty-cart-cls text-center" *ngIf='!products.length'>
             <img src="assets/images/empty-wishlist.png" alt="Empty cart" title="Emprt cart">
-            <h3 class="mt-4"><b>Wishlist is Empty</b></h3>
+            <h3 class="mt-4"><b>Shortlist is Empty</b></h3>
             <h4>Explore more shortlist some items.</h4>
         </div>
         <div class="row" *ngIf='products.length'>
@@ -22,13 +22,15 @@
                     <tbody *ngFor="let productkart of products">
                         <tr>
                             <td>
-                                <a (click)="GoToDetail(productkart.rowID,productkart?.productSizeId,productkart?.setType,productkart?.setNo);">
-                                    <img [defaultImage]="ImageSrc ? ImageSrc : 'assets/images/product/placeholder.jpg'" [lazyLoad]="ImageSrc ? ImageSrc : ProductImage+productkart.productId+'/frontImage/'+productkart.frontImage" class="img-fluid lazy-loading" alt="" />
+                                <a
+                                    (click)="GoToDetail(productkart.rowID,productkart?.productSizeId,productkart?.setType,productkart?.setNo);">
+                                    <img [defaultImage]="ImageSrc ? ImageSrc : 'assets/images/product/placeholder.jpg'"
+                                        [lazyLoad]="ImageSrc ? ImageSrc : ProductImage+productkart.productId+'/frontImage/'+productkart.frontImage"
+                                        class="img-fluid lazy-loading" alt="" />
                                 </a>
                             </td>
                             <td>
-                                <a>{{
-                  productkart.productName | titlecase }}</a>
+                                <a>{{productkart.productName | titlecase }}</a>
                                 <div class="mobile-cart-content row">
                                     <div class="col-xs-3">
                                         <p>{{ productkart.qty > 0 ? 'in stock' : 'out of stock' }}</p>
@@ -43,10 +45,12 @@
                                     </div>
                                     <div class="col-xs-3">
                                         <h2 class="td-color">
-                                            <a href="javascript:void(0)" (click)="removeItem(productkart)" class="icon mr-1">
+                                            <a href="javascript:void(0)" (click)="removeItem(productkart)"
+                                                class="icon mr-1">
                                                 <i class="ti-close"></i>
                                             </a>
-                                            <a [routerLink]="['/shop/cart']" (click)="addToCart(productkart)" class="cart">
+                                            <a [routerLink]="['/shop/cart']" (click)="addToCart(productkart)"
+                                                class="cart">
                                                 <i class="ti-shopping-cart"></i>
                                             </a>
                                         </h2>
@@ -68,9 +72,10 @@
                                 <a href="javascript:void(0)" (click)="removeItem(productkart)" class="icon mr-3">
                                     <i class="ti-close"></i>
                                 </a>
-                                <a href="javascript:void(0)" *ngIf="productkart.qty > 0" (click)="addToCart(productkart)" class="cart">
+                                <!-- <a href="javascript:void(0)" *ngIf="productkart.qty > 0"
+                                    (click)="addToCart(productkart)" class="cart">
                                     <i class="ti-shopping-cart"></i>
-                                </a>
+                                </a> -->
                             </td>
                         </tr>
                     </tbody>
