--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -188,8 +188,9 @@
                                 </div>
                                 <div class="order-parts">
                                     <!-- <span> -->
-                                    <a href="{{WebSite_URL}}report/orderInvoice/{{lst.guid}}" target="_blank">Print
-                                        Order</a>
+                                    <!-- <a href="{{WebSite_URL}}report/orderInvoice/{{lst.guid}}" target="_blank">Print
+                                        Order</a> -->
+                                        <a href="javaScript:void(0);" (click)="DownloadInvoice(lst)">Print Order</a>
                                     <!-- </span> -->
 
                                     <!-- <span class="badge badge-success">{{lst.statusName}}</span> -->
