--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="col-lg-3 text-right">
                     <ul class="header-dropdown">
-                        <li class="compare" style="padding-right: 43px">
+                        <li class="compare">
                             <a [routerLink]="['/shop/compare']">
                                 <i class="fa fa-random" aria-hidden="true"></i>Compare
                                 <span *ngIf="CompareCount>0" class="cart_qty_cls"
